# Ofnir

./: .gitignore  CMakeLists.txt  CMakePresets.json  OCR.sln  OCRTry.sln  README.md  ocr_extraction.feature
JackyPersonal/QtWidgetsApplication1/: QtWidgetsApplication1.sln
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/: DraggablePopup.cpp  DraggablePopup.h  FontSettingsDialog.cpp  FontSettingsDialog.h  HotkeyFilter.cpp  HotkeyFilter.h  OCRUtil.cpp  OCRUtil.h  OcrAndTranslate.cpp  OutlinedLabel.cpp  OutlinedLabel.h  QTCV.cpp  QTCV.h  QtWidgetsApplication1.cpp  QtWidgetsApplication1.h  QtWidgetsApplication1.vcxproj  QtWidgetsApplication1.vcxproj.filters  ScreenshotOverlay.cpp  ScreenshotOverlay.h  VisualComponents.h  main.cpp  output.txt  user_settings.json
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/x64/Debug/: QtWidgetsApplication1.exe.recipe  QtWidgetsApplication1.vcxproj.FileListAbsolute.txt  outlinedlabel.obj.enc  qtwidgetsapplication1.obj.enc
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/x64/Debug/qt/moc/: moc_DraggablePopup.cpp  moc_HotkeyFilter.cpp  moc_QtWidgetsApplication1.cpp  moc_ScreenshotOverlay.cpp  moc_VisualComponents.cpp  moc_qhotkey.cpp  moc_qhotkey_p.cpp
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/x64/Debug/qt/qmake/: qtvars.pro  qtvars.vcxproj
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/x64/Release/: QtWidgetsApplication1.exe.recipe  QtWidgetsApplication1.ipdb  QtWidgetsApplication1.vcxproj.FileListAbsolute.txt
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/x64/Release/qt/moc/: moc_FontSettingsDialog.cpp  moc_OutlinedLabel.cpp  moc_QtWidgetsApplication1.cpp
JackyPersonal/QtWidgetsApplication1/QtWidgetsApplication1/x64/Release/qt/qmake/: .qmake.stash  qtvars.vcxproj
OCRTry/: CMakeLists.txt  OCRTry.vcxproj  OCRTry.vcxproj.filters  OcrTranslate.cpp  OcrTranslate.hpp  main.cpp  output.txt
OCRTry/x64/Debug/: OCRTry.exe.recipe  OCRTry.ilk  OCRTry.vcxproj.FileListAbsolute.txt  Ofnir.exe.recipe  Ofnir.ilk
cmake_modules/: FindTesseract.cmake
features/: README.txt  capture_err.feature  handling_error.feature  ocr_extraction.feature  settings.feature  translation.feature  translation_dictionary.feature  translation_nodictionary.feature  ui_workflow.feature
features/preprocessing/: adaptive_ocr.feature  standard_text_preprocessing.feature  stroke_preserving_preprocessing.feature
include/: ocrTranslate.hpp
ofnirui/UI/: main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  main.cpp  ocrTranslate.cpp  ocrTranslateTest.cpp  screenCaptureWidget.cpp  screenCaptureWidget.hpp  test.cpp
src/core/: CMakeLists.txt  imgpreprocessing.cpp  imgpreprocessing.h  ofnirdaemon.cpp  ofnirdaemon.h
src/settings/: CMakeLists.txt  globalHotkeyFilter.cpp  globalHotkeyFilter.h
src/widgets/: CMakeLists.txt  infowindow.cpp  infowindow.h  infowindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocrTranslate.cpp  ocrTranslate.h  screenCaptureWidget.cpp  screenCaptureWidget.h  trayicon.cpp  trayicon.h
